--- a/src/disassembly.tex
+++ b/src/disassembly.tex
@@ -65,7 +65,7 @@ the C64, actual development could be done on any system the developer found tole
 Along the way we will have to invent names for things that are meaningful to us: the names Jeff Minter gave to his
 functions, routines, and variables are long since lost to us. They were thrown away by the assembler as unnecessary
 for execution of the machine code. As we proceed, we will see why but it hopefully makes sense to say that the
-6502 CPU in the C64 doesn't care what things are called it just cares where in the 65,632 bytes of its RAM things
+6502 CPU in the C64 doesn't care what things are called, it just cares where in the 65,632 bytes of its RAM things
 are located. That is to say it only cares about their 'address'.
 
 So let's start by stepping back for a second. Let's put the machine code and the snippet of code we disassembled it
