--- a/src/main_game.tex
+++ b/src/main_game.tex
@@ -413,7 +413,7 @@ When we initialize the game we use a bunch of pointers\index{pointers} to store 
         STA planetTextureBottomLayerPtrHi%\index{planetTextureBottomLayerPtrHi}%
 \end{lstlisting}
 
-Every time we scroll by one ore more characters along the planet\index{planet} surface\index{surface} updating what we see on the screen\index{screen} will
+Every time we scroll by one or more characters along the planet\index{planet} surface\index{surface}, updating what we see on the screen\index{screen} will
 just be a simple question of calling a routine\index{routine} called \icode{DrawPlanetSurfaces\index{DrawPlanetSurfaces}} to write wherever in each layer
 the current pointer\index{pointer} is pointing to:
 
