--- a/src/binary.tex
+++ b/src/binary.tex
@@ -378,9 +378,9 @@ This upper limit is what gives the Commodore 64 its name. It has 64 kilobytes of
   {
     \setlength{\tabcolsep}{3.0pt}
     \setlength\cmidrulewidth{\heavyrulewidth} % Make cmidrule = 
-    \begin{adjustbox}{width=8cm,center}
+    \begin{adjustbox}{width=5cm,center}
 
-      \begin{tabular}{ccccccccc}
+      \begin{tabular}{ccc}
         \toprule
         Hex & Decimal & Meaning  \\
         \midrule
