--- a/src/level_data.tex
+++ b/src/level_data.tex
@@ -34,9 +34,9 @@ the sheer variety of adversaries the player faces.
     \setlength\cmidrulewidth{\heavyrulewidth} % Make cmidrule = 
 	\begin{subfigure}{1\textwidth}
   \hspace{0.2cm}
-    \includegraphics[width=3cm]{src/sprites/gallery/sprite_162.png}%
+    \includegraphics[width=3cm]{src/sprites/gallery/sprite_160.png}%
   \hspace{1.3cm}
-    \includegraphics[width=3cm]{src/sprites/gallery/sprite_162.png}%
+    \includegraphics[width=3cm]{src/sprites/gallery/sprite_161.png}%
   \hspace{1.4cm}
     \includegraphics[width=3cm]{src/sprites/gallery/sprite_162.png}%
 	\end{subfigure}
@@ -1366,7 +1366,7 @@ been struck by a bullet.
   {
     \setlength{\tabcolsep}{3.0pt}
     \setlength\cmidrulewidth{\heavyrulewidth} % Make cmidrule = 
-    \begin{adjustbox}{width=13cm}
+    \begin{adjustbox}{width=12cm}
 
       \begin{tabular}{lll}
         \toprule
@@ -1466,7 +1466,7 @@ The level data accomodates up to four incarnations in total for an enemy wave.
   {
     \setlength{\tabcolsep}{3.0pt}
     \setlength\cmidrulewidth{\heavyrulewidth} % Make cmidrule = 
-    \begin{adjustbox}{width=13cm}
+    \begin{adjustbox}{center,width=12cm}
 
       \begin{tabular}{lll}
         \toprule
